# file_editor

./: CMakeLists.txt  README.MD
cpp/: listwidgetdrop.cpp  main.cpp  mainwindow.cpp  secondwindow.cpp
hpp/: listwidgetdrop.h  mainwindow.h  secondwindow.h
resources/: fonts.qrc  icon.rc
ui/: mainwindow.ui  secondwindow.ui
